--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LostWear Shop</title>
-    <link rel="icon" href="imagens/logo/logo.ico" type="image/x-icon">
+    <link rel="icon" href="imagens/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
         <div class="logo">
             <a href="#">
-                <img src="imagens/logo/logo.2.png" alt="Logotipo LostWear">
+                <img src="imagens/logo.2.png" alt="Logotipo LostWear">
                 
             </a>
         </div>
@@ -90,3 +90,4 @@
     </footer>
 </body>
 </html>
+
